@@ -3,6 +3,7 @@ Revision history for Net-Silverpeak-Orchestrator
 {{ $NEXT }}
     - fix hardcoded template group name instead of
       NET_SILVERPEAK_ORCHESTRATOR_POLICY environment variable
+    - skip appliance tests if Orchestrator has none assigned
 
 0.001002  2021-02-19 07:35:30+01:00 Europe/Vienna
     - fix Data::Dumper::Concise usage in t/api.t
